core/cu29_derive/tests/compile_fail/cu_msg/invalid_logging_config.rs
use cu29_derive::gen_cumsgs;

gen_cumsgs!("config/invalid_logging_config.ron");

fn main() {}