core/cu29_derive/tests/compile_fail/cu_msg/invalid_logging_config.stderr
error: Section size (2 MiB) cannot be larger than slab size (1 MiB). Adjust the parameters accordingly.
          context:None
 --> tests/compile_fail/cu_msg/invalid_logging_config.rs:3:1
  |
3 | gen_cumsgs!("config/invalid_logging_config.ron");
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `gen_cumsgs` (in Nightly builds, run with -Z macro-backtrace for more info)
